Migrate to b134 (--add-modules needed for javac even when --add-reads is already given)